force-app/main/default/objects/dupcheck__dcDiscard__c/dupcheck__dcDiscard__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Discard</label>
    <nameField>
        <displayFormat>DCDIS{00000000}</displayFormat>
        <label>Plauti Deduplicate Discard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Discards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>