force-app/main/default/objects/dupcheck__dcDiscard__c/fields/dupcheck__objectA__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__objectA__c</fullName>
    <label>Object A</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>