force-app/main/default/objects/dupcheck__dcDiscard__c/fields/dupcheck__objectB__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__objectB__c</fullName>
    <label>Object B</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>