force-app/main/default/objects/dupcheck__dcDiscard__c/fields/dupcheck__recordB__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__recordB__c</fullName>
    <externalId>true</externalId>
    <label>Record B</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>